src/docusaurus/versioned_docs/version-2.4/faq.mdx
import PartialExample from './_mentored.mdx';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Admonition from '@theme/Admonition';

# FAQ

<details>
  <summary>Why <PartialExample mentored />?</summary> 
  <PartialExample mentored /> is an open source mentoring application that facilitates peer learning and professional development.

  To learn more, see <a href="intro">Welcome to <PartialExample mentored /></a>.

</details>

<details>
<summary>How can mentors and mentees use <PartialExample mentored />?</summary>

* Mentors can create mentoring sessions and join other sessions. 
* Mentees can join mentoring sessions. 

To learn more, see <a href="using-the-mentored-application">About the <PartialExample mentored /> Mobile Application</a>.
</details>

<details>
<summary>How can I sign up on <PartialExample mentored />?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>To sign up, you can open the <PartialExample mentored /> application and tap <b>Sign up</b>.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>To sign up, you can open the web portal and click <b>Sign up</b>.</p>
</TabItem>
< /Tabs>
To learn more, see the following topics:
<ul>
<li><a href="signing-up-as-a-mentor">Signing up on <PartialExample mentored /> as a Mentor</a>.</li>
<li><a href="signing-up-as-a-mentee">Signing up on <PartialExample mentored /> as a Mentee</a>.</li>
</ul>

</details>

<details>
<summary>What if I don't remember my password?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>On the Login page, you can tap <b>Forgot Password</b> to change your password.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>On the Login page, you can click the <b>Forgot password</b> link to change your password.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="logging-in#resetting-the-password">Resetting the Password</a>.
</details>

<details>
<summary>What to do if I face issues while signing up or logging in?</summary>

If you face any issues while logging in or signing up, click the <b>Having trouble in logging in/signing up? Write to us.</b> link to write to the support team.

To learn more, see <a href="report-signuporloginissue">Reporting Issues Related to Signing up and Logging in</a>.
</details>

<details>
<summary>How to change the language on the application?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>To change the language, you can go to the <b>Application</b> menu and select the <b>Language</b> option.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>You can select the language of your choice from the <b>Language</b> menu on the top-right corner of the page.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="change-language">Changing the Language Settings</a>.
</details>

<details>
<summary>What to do if I face any technical issues?</summary>

If you face any technical issues, you can report the issue to the support team on the Help page.

To learn more, see <a href="report-an-issue">Reporting an Issue</a>.
</details>

<details>
<summary>Where can I find the video instructions about using the application features?</summary>

To view the video instructions, you can go to the **Application** menu and select the **Help videos** option.

To learn more, see <a href="view-helpvideos">Viewing the Help Videos</a>.
</details>

<details>
<summary>Can I edit my profile details later?</summary>

After signing up, you can update your profile details any time.

To learn more, see the following topics: 
* <a href="creating-and-managing-mentor-profile">Creating a Mentor Profile</a>
* <a href="creating-and-managing-mentee-profile">Creating a Mentee Profile</a>

</details>

<details>
<summary>Where can I find details about mentors?</summary>

You can use the <a href="mentor-directory">Mentor Directory</a> to look up details on individual mentors.
</details>

<details>
<summary>How can I create a session?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>To create a new session, go to the <b>Created sessions</b> tab on the Home page and tap <b>Create session</b>.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>To create a new session, go to the <b>Created sessions</b> tab and click the <b>Click here to create a new session</b> button.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="setting-up-a-mentored-session">Setting up a Session</a>. 
</details>

<details>
<summary>Can I make changes to the session details or timings?</summary>

You can edit a session to change the timings or the details associated with it. In case you want to cancel the session, you can delete the session.

To learn more, see <a href="setting-up-a-mentored-session">Setting up a Session</a>. 
</details>

<details>
<summary>What is the duration of each mentoring session?</summary>

The minimum duration of a session should be 30 minutes. 

To learn more, see <a href="setting-up-a-mentored-session">Setting up a Session</a>.
</details>

<details>
<summary>How many sessions can I create?</summary>

<PartialExample mentored /> does not apply any limits on the number of sessions that a mentor can host. 

To learn more, see <a href="setting-up-a-mentored-session">Setting up a Session</a>.
</details>

<details>
<summary>What are the meeting platforms available to host my session?</summary>

Mentors can host their sessions using any one of the following meeting platforms:

* BigBlueButton
* Google Meet
* WhatsApp
* Zoom

To learn more, see <a href="setting-up-a-mentored-session">Setting up a Session</a>.
</details>

<details>
<summary>How do I start my session?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>On the <b>Created sessions</b> tab of the Home page, you can find your session and tap <b>Start</b>.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>On the <b>Created sessions</b> tab, you can find your session and click <b>Start</b>.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="starting-a-session">Starting a Session</a>.
</details>

<details>
<summary>Are these sessions pre-recorded or live?</summary>

Mentoring sessions are live sessions hosted by mentors. You cannot upload or host a recorded session.  

To learn more, see the following sections: 
* <a href="joining-a-session">Joining a Session</a>  
* <a href="starting-a-session">Starting a Session</a>

</details>

<details>
<summary>Where can I find the upcoming sessions?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>You can find the upcoming sessions on the <b>All sessions</b> tab of the Home page.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>You can find the upcoming sessions on the <b>Home</b> tab.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="enrolling-for-a-session">Enrolling for a Session</a>.
</details>

<details>
<summary>How can I register for a session?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>On the <b>All sessions</b> tab of the Home page, you can find a session of interest and tap <b>Enroll</b>.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>On the <b>Home</b> tab, you can find a session of interest and click <b>Enroll</b>.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="enrolling-for-a-session">Enrolling for a Session</a>.
</details>

<details>
<summary>Where can I find the enrolled sessions?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>You can find the enrolled sessions on the <b>Enrolled sessions</b> tab of the Home page.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>You can find the enrolled sessions on the <b>Enrolled sessions</b> tab.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="joining-a-session">Joining a Session</a>.
</details>

<details>
<summary>Is there a limit on the number of participants who can enroll for a session?</summary>

You cannot enroll for a session after the enrollment limit is reached. If you try to enroll after this limit is reached, a *Session seats full* message appears.

To learn more, see <a href="enrolling-for-a-session">Enrolling for a Session</a>.

</details>

<details>
<summary>Can I cancel my enrollment?</summary>

You can cancel your enrollment if the mentor has not started the session.

To learn more, see <a href="enrolling-for-a-session#cancelling-your-enrollment">Cancelling Your Enrollment</a>.
</details>

<details>
<summary>How do I attend a session?</summary>

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>On the <b>Enrolled sessions</b> tab of the Home page, you can find an enrolled session and tap <b>Join</b>.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>On the <b>Enrolled sessions</b> tab, you can find an enrolled session and tap <b>Join</b>.</p>
</TabItem>
< /Tabs>

To learn more, see <a href="joining-a-session">Joining a Session</a>.
</details>

<details>
<summary>Can I share session links?</summary>

The host and participants can share session links with their phone or email contacts, and over social media.

To learn more, see the following topics:

* <a href="inviting-mentorsandmentees-host">How can a session host share the session invite?</a> 
* <a href="inviting-mentorsandmentees-participants">How can a participant share the session invite?</a>

</details>

<details>
<summary>Can participants who have not registered on <PartialExample mentored /> attend sessions using a link?</summary>

To join sessions using a link, participants must sign up on <PartialExample mentored />.

To learn more, see <a href="joining-a-session">Joining a Session</a>.
</details>

<details>
<summary>How can I track my progress?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>You can track your activity and track your progress on the <b>Dashboard</b> tab.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>To track your activity and track your progress, go to the <b>Application</b> menu on the top-right corner of the page and select <b>Dashboard</b>.</p>
</TabItem>
< /Tabs>

To learn more, see the following topics: 

* <a href="dashboard-for-mentors">Dashboard for Mentors</a>
* <a href="dashboard-for-mentees">Dashboard for Mentees</a>

</details>

<details>
<summary>Can I provide a feedback for the session?</summary>

At the end of each session, <PartialExample mentored /> enables the host and participants to rate the session. 

To learn more, see the following topics: 

* <a href="feedbackformentors">How mentors can record their feedback?</a>
* <a href="feedbackformentees">How mentees can record their feedback?</a>

</details>

<details>
<summary>Can I view the ratings for the sessions I have hosted?</summary>
<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>To view your session ratings, you can go to the <b>Profile</b> tab.</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<p>To track your activity and track your progress, go to the <b>Application</b> menu on the top-right corner of the page and select <b>My profile</b>.</p>
</TabItem>
< /Tabs> 

To learn more, see <a href="creating-and-managing-mentor-profile">Creating and Managing a Mentor Profile</a>.
</details>

<details>
<summary>Can I view a mentor’s session ratings?</summary>

You can view a mentor’s session ratings using the <a href="mentor-directory">Mentor Directory</a>.
</details>

<details>
<summary>How can I delete my account?</summary>

You can create a request to delete your account on the Help page.

To learn more, see any one of the following topics:
* <a href="mentor-deleteaccountrequest">How mentors can create a request for deleting their account?</a>
* <a href="mentee-deleteaccountrequest">How mentees can create a request for deleting their account?</a>

</details>
